--- a/common/makefile.cmk
+++ b/common/makefile.cmk
@@ -36,6 +36,7 @@ Compile( "source/logger.cpp", "obj/logger.o")
 Compile( "source/error.cpp", "obj/error.o")
 Compile( "source/chronology.cpp", "obj/chronology.o")
 Compile( "source/process.cpp", "obj/process.o")
+Compile( "source/network_byteorder.cpp", "obj/network_byteorder.o")
 
 Compile( "source/field_buffer.cpp", "obj/field_buffer.o")
 Compile( "source/octet_buffer.cpp", "obj/octet_buffer.o")
@@ -62,6 +63,7 @@ LinkLibrary( "casual-common",
 	"obj/error.o",
 	"obj/chronology.o",
 	"obj/process.o",
+	"obj/network_byteorder.o",
 	"obj/field_buffer.o",
 	"obj/octet_buffer.o",
 	"obj/order_buffer.o",
@@ -101,6 +103,7 @@ Compile( "unittest/isolated/source/test_file.cpp", "unittest/isolated/obj/test_f
 Compile( "unittest/isolated/source/test_process.cpp", "unittest/isolated/obj/test_process.o")
 Compile( "unittest/isolated/source/test_string.cpp", "unittest/isolated/obj/test_string.o")
 Compile( "unittest/isolated/source/test_error.cpp", "unittest/isolated/obj/test_error.o")
+Compile( "unittest/isolated/source/test_network_byteorder.cpp", "unittest/isolated/obj/test_network_byteorder.o")
 
 Compile( "unittest/isolated/source/test_signal.cpp", "unittest/isolated/obj/test_signal.o")
 Compile( "unittest/isolated/source/test_types.cpp", "unittest/isolated/obj/test_types.o")
@@ -124,6 +127,7 @@ LinkIsolatedUnittest( "casual-common-isolated",
     "unittest/isolated/obj/test_process.o",
     "unittest/isolated/obj/test_string.o",
     "unittest/isolated/obj/test_error.o",
+    "unittest/isolated/obj/test_network_byteorder.o",
     "unittest/isolated/obj/test_signal.o", 
     "unittest/isolated/obj/test_types.o",
     "unittest/isolated/obj/test_octet_buffer.o",
